src/snapshots/bminor__parser__test__parse_unary_expression-5.snap
---
source: src/parser.rs
expression: expression
---
Unary {
    operator: Token {
        kind: Bang,
        lexeme: "!",
        line: 0,
    },
    value: Boolean {
        expression: Literal {
            value: Token {
                kind: True,
                lexeme: "true",
                line: 0,
            },
        },
    },
}
