src/snapshots/bminor__parser__test__primary_expression-2.snap
---
source: src/parser.rs
expression: "parse_expression(\"1\")"
---
Ok(
    Literal {
        value: Token {
            kind: IntegerLiteral,
            lexeme: "1",
            line: 0,
        },
        kind: Integer,
    },
)
