src/snapshots/bminor__parser__test__primary_expression-3.snap
---
source: src/parser.rs
expression: "parse_expression(\"\\\"string literal\\\"\")"
---
Ok(
    Literal {
        value: Token {
            kind: StringLiteral,
            lexeme: "\"string literal\"",
            line: 0,
        },
        kind: String,
    },
)
