src/snapshots/bminor__parser__test__primary_expression-4.snap
---
source: src/parser.rs
expression: "parse_expression(\"x\")"
---
Variable {
    name: Token {
        kind: Identifier,
        lexeme: "x",
        line: 0,
    },
}
